--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.11.3",
+    "framer-motion": "^11.3.24",
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "sheryjs": "^1.0.0-beta.0.1.8",
+    "typed.js": "^2.1.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
