--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "sass": "^1.77.8",
     "sheryjs": "^1.0.0-beta.0.1.8",
     "typed.js": "^2.1.0",
     "typewriter-effect": "^2.21.0"
