--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap-icons": "^1.11.3",
-    "framer-motion": "^11.3.24",
+    "framer-motion": "^12.0.0-alpha.0",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
     "next": "14.2.5",
